--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,43 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a href="/" class="navbar-brand">Hypnos</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Hotels</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Suites</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="collapse navbar-collapse justify-content-end">
+                    <ul class="navbar-nav">
+                        {% if app.user %}
+                            <li class="nav-item">
+                                <a href="/mon-compte" class="nav-link">Mon compte</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a href="/connexion" class="nav-link">Connexion</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="/inscription" class="nav-link">Inscription</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container">
+            {% block body %}
+            {% endblock %}
+        </div>
     </body>
 </html>
