--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,10 +23,10 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Hotels</a>
+                            <a href="/hotels" class="nav-link">Hotels</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Suites</a>
+                            <a href="/suites" class="nav-link">Suites</a>
                         </li>
                     </ul>
                 </div>
