--- a/templates/hotel/render.html.twig
+++ b/templates/hotel/render.html.twig
@@ -2,6 +2,20 @@
 
 {% block title %}{{ hotel.name }}{% endblock %}
 
+{% block body_name %}suites{% endblock %}
+
+
 {% block body %}
-    {{ dump(hotel) }}
+    {% for suite in suites %}
+        <div class="card">
+            <div class="card-body">
+                <h5>{{ suite.name }}</h5>
+                <p>{{ suite.description | raw }}</p>
+                <div class="d-flex justify-content-between">
+                    <p class="price">{{ suite.price }} €</p>
+                    <a href="{{ path('app_reservation', {slug_hotel: suite.hotel.slug, slug_suite: suite.slug}) }}" class="btn btn-primary">Réserver</a>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
 {% endblock %}
