--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Hello HomeController!{% endblock %}
 
+{% block body_name %}home{% endblock %}
+
 {% block body %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
