feat(Controllers): set html title

--- a/templates/suite/render.html.twig
+++ b/templates/suite/render.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}{{ suite.name }}{% endblock %}
 
+{% block body_name %}suite{% endblock %}
+
 {% block body %}
     {{ dump(suite) }}
 {% endblock %}
