--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -4,6 +4,9 @@
 
 {% form_theme form 'bootstrap_5_layout.html.twig' %}
 
+{% block body_name %}registration{% endblock %}
+
+
 {% block body %}
     <h1>Inscription</h1>
 
