--- a/templates/suite/index.html.twig
+++ b/templates/suite/index.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Hello SuiteController!{% endblock %}
 
+{% block body_name %}suites{% endblock %}
+
 {% block body %}
     <h1>Liste de nos suites</h1>
     {% for suite in suites %}
