--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Hypnos Hotel">
+        <meta name="robots" content="NOINDEX, NOFOLLOW">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
@@ -25,9 +27,6 @@
                         <li class="nav-item">
                             <a href="/hotels" class="nav-link">Hotels</a>
                         </li>
-                        <!--<li class="nav-item">
-                            <a href="/suites" class="nav-link">Suites</a>
-                        </li>-->
                     </ul>
                 </div>
                 <div class="collapse navbar-collapse justify-content-end">
