feat(NavBar): Change CSS, remove navbar-brand flex

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,6 +6,7 @@
 
 {% block body %}
     <div class="container-fluid cta-homepage">
+        <div class="bg-image"></div>
         <div class="row px-4 py-5 my-5 text-center">
             <h1 class="display-5 fw-bold">Trouver la suite de vos rêves<br>pour vos vacances</h1>
             <div class="col-lg-6 mx-auto">
