--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -22,20 +22,26 @@ nav {
   height: 95px;
 
   .navbar-brand {
-    height: 100%;
-    display: flex;
+    //height: 100%;
+    /*display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center;*/
 
     font-family: 'Tostada-Regular';
 
-    width: 15%;
-    text-align: center;
+    //width: 15%;
+    //text-align: center;
     font-size: 1.75rem;
   }
 
+  #navbarHypnos:last-child {
+    .navbar-nav {
+      gap: 15px;
+    }
+  }
+
   ul {
-    
+
     li {
       display: flex;
       align-items: center;
@@ -67,18 +73,37 @@ nav {
 }
 
 #home {
+  margin-top: 56px;
+
   .cta-homepage {
-    background-image: url('http://localhost:8000/assets/img/panoramic_homepage.jpg');
+    /*background-image: url('http://localhost:8000/assets/img/panoramic_homepage.jpg');
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat;*/
+    position: relative;
 
     color: white;
 
-    padding: 3rem 0;
+    padding: 1rem 0;
+
+    .bg-image {
+      position: absolute;
+
+      width: 100%;
+      height: 100%;
+
+      z-index: -1;
+      filter: blur(2px);
+
+      background-image: url('http://localhost:8000/assets/img/panoramic_homepage.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
 
     .row {
-      margin-top: 56px !important;
+      margin-top: 76px !important;
       padding-top: 0 !important;
+
+      width: 100%;
     }
   }
 }
