--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -60,8 +60,16 @@ nav {
     }
   }
 
-  .container-fluid, .navbar-collapse, ul, li {
-    height: 95px;
+  #navbarHypnos {
+    @media screen and (max-width: 992px) {
+      width: 100vw;
+      position: absolute;
+      left: 0px;
+      top: 90px;
+
+      padding-right: 1rem !important;
+      padding-left: 1rem !important;
+    }
   }
 
   i.bi {
@@ -72,8 +80,16 @@ nav {
   }
 }
 
+.wrapper {
+  margin-top: 75px;
+}
+
 #home {
-  margin-top: 56px;
+  //margin-top: 56px;
+
+  .wrapper {
+    margin-top: -25px;
+  }
 
   .cta-homepage {
     /*background-image: url('http://localhost:8000/assets/img/panoramic_homepage.jpg');
@@ -106,6 +122,19 @@ nav {
       width: 100%;
     }
   }
+
+  .hotels {
+    justify-content: center;
+
+    .card {
+      width: 33.3333%;
+      flex: none;
+    }
+  }
+}
+
+#login {
+
 }
 
 .btn {
