--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,4 +21,21 @@
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <div class="card-group hotels">
+            {% for hotel in hotels %}
+                <div class="card">
+                    <img src="" alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ hotel.name }} - {{ hotel.city }}</h5>
+                        <p class="card-text">{{ hotel.description | striptags | u.truncate(150, "...") | raw }}</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="{{ path('app_hotel', {slug: hotel.slug}) }}" class="btn btn-secondary">Voir les suites</a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
