--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -8,7 +8,13 @@
 
 
 {% block body %}
-    <h1>Inscription</h1>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <h1>Inscription</h1>
 
-    {{ form(form) }}
+                {{ form(form) }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
