--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,24 +22,24 @@
                 <div class="collapse navbar-collapse justify-content-center bg-light" id="navbarHypnos">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="/hotels" class="nav-link">Hotels</a>
+                            <a href="{{ path('app_hotels') }}" class="nav-link">Hotels</a>
                         </li>
                         <li class="nav-item">
-                            <a href="/qui-sommes-nous" class="nav-link">Qui sommes nous ?</a>
+                            <a href="{{ path('app_about_us') }}" class="nav-link">Qui sommes nous ?</a>
                         </li>
                         <li class="nav-item">
-                            <a href="/contact" class="nav-link">Contact</a>
+                            <a href="{{ path('app_contact') }}" class="nav-link">Contact</a>
                         </li>
                         {% if app.user %}
                             <li class="nav-item d-lg-none d-xl-none d-xxl-none">
-                                <a href="/mon-compte" class="nav-link"><i class="bi bi-person"></i>Mon compte</a>
+                                <a href="{{ path('app_my_account') }}" class="nav-link"><i class="bi bi-person"></i>Mon compte</a>
                             </li>
                         {% else %}
                             <li class="nav-item d-lg-none d-xl-none d-xxl-none">
-                                <a href="/connexion" class="nav-link">Connexion</a>
+                                <a href="{{ path('app_login') }}" class="nav-link">Connexion</a>
                             </li>
                             <li class="nav-item d-lg-none d-xl-none d-xxl-none">
-                                <a href="/inscription" class="nav-link">Inscription</a>
+                                <a href="{{ path('app_register') }}" class="nav-link">Inscription</a>
                             </li>
                         {% endif %}
                     </ul>
@@ -48,14 +48,14 @@
                     <ul class="navbar-nav">
                         {% if app.user %}
                             <li class="nav-item">
-                                <a href="/mon-compte" class="nav-link"><i class="bi bi-person"></i>Mon compte</a>
+                                <a href="{{ path('app_my_account') }}" class="nav-link"><i class="bi bi-person"></i>Mon compte</a>
                             </li>
                         {% else %}
                             <li class="nav-item">
-                                <a href="/connexion" class="btn btn-secondary">Connexion</a>
+                                <a href="{{ path('app_login') }}" class="btn btn-secondary">Connexion</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/inscription" class="nav-link">Inscription</a>
+                                <a href="{{ path('app_register') }}" class="nav-link">Inscription</a>
                             </li>
                         {% endif %}
                     </ul>
@@ -77,9 +77,9 @@
                 </a>
 
                 <ul class="nav col-md-4 justify-content-end">
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Hotels</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Qui sommes nous ?</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
+                    <li class="nav-item"><a href="{{ path('app_hotels') }}" class="nav-link px-2 text-muted">Hotels</a></li>
+                    <li class="nav-item"><a href="{{ path('app_about_us') }}" class="nav-link px-2 text-muted">Qui sommes nous ?</a></li>
+                    <li class="nav-item"><a href="{{ path('app_contact') }}" class="nav-link px-2 text-muted">Contact</a></li>
                 </ul>
             </footer>
         </div>
