--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -32,10 +32,13 @@
                         <p class="card-text">{{ hotel.description | striptags | u.truncate(150, "...") | raw }}</p>
                     </div>
                     <div class="card-footer">
-                        <a href="{{ path('app_hotel', {slug: hotel.slug}) }}" class="btn btn-secondary">Voir les suites</a>
+                        <a href="{{ path('app_hotel', {slug: hotel.slug}) }}" class="btn btn-primary">Voir les suites</a>
                     </div>
                 </div>
             {% endfor %}
+        </div>
+        <div class="text-center mt-3">
+            <a href="{{ path('app_hotels') }}" class="btn btn-secondary text-center">Voir tous les hotels</a>
         </div>
     </div>
 {% endblock %}
