--- a/templates/hotel/reservation.html.twig
+++ b/templates/hotel/reservation.html.twig
@@ -5,10 +5,11 @@
 {% block body_name %}reservation{% endblock %}
 
 {% block body %}
-    <div class="card">
-        <div class="card-body">
-            {{ form_start(form) }}
-            <input type="hidden" name="price" id="suite_price_value" value="{{ suite.price }}">
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                {{ form_start(form) }}
+                <input type="hidden" name="price" id="suite_price_value" value="{{ suite.price }}">
                 <div id="reservation">
                     <h2>Réservation</h2>
                     <p>
@@ -21,7 +22,8 @@
                     <h5>Total <span id="suite_price">{{ suite.price * 3 }} €</span> soit {{ suite.price }} € / nuit</h5>
                     {{ form_row(form.submit) }}
                 </div>
-            {{ form_end(form) }}
+                {{ form_end(form) }}
+            </div>
         </div>
     </div>
 {% endblock %}
