--- a/templates/hotel/reservation_success.html.twig
+++ b/templates/hotel/reservation_success.html.twig
@@ -5,5 +5,9 @@
 {% block body_name %}reservation_success{% endblock %}
 
 {% block body %}
-    <h2>Réservation validée avec succès !</h2>
+    <div class="container text-center">
+        <h2 class="text-center">Réservation validée avec succès !</h2>
+        <p class="text-center">Vous pouvez désormais retrouver votre réservation sur votre espace client !</p>
+        <a href="{{ path('app_my_account') }}" class="btn btn-primary text-center">Voir mon compte</a>
+    </div>
 {% endblock %}
