feat(Image Gallery): Suite Image Gallery

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -134,6 +134,8 @@ nav {
 
   .hotels {
     justify-content: center;
+    flex-direction: row;
+    display: flex;
 
     .card {
       width: 33.3333%;
